# src/main/openapi/university-openapi.yml
@@ -209,13 +209,6 @@ paths:
       description: ''
       tags:
         - student-controller
-  /api/reports:
-    get:
-      summary: Your GET endpoint
-      tags:
-        - report-controller
-      responses: {}
-      operationId: showSemesterReport
 components:
   schemas:
     CourseDto:
